src/test/deca/context/valid/provided/test20.deca
{
    int a;
    float b;
    if (a>=b){
        print("zooom");
    }
}