src/test/deca/context/invalid/provided/testi23.deca
class A{
}
class B{}
{   
    int x;
    A a = null;
    B b = new B();
    if (a instanceof boolean){
        print("il marche il marche encoree ...");
    }
}